<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1098</width>
    <height>670</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <property name="autoFillBackground">
   <bool>true</bool>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <widget class="QWidget" name="centralwidget">
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
   <property name="styleSheet">
    <string notr="true">background-image: url(&quot;C:/Users/huynh/OneDrive/Desktop/VMmanager/Python_Water-Meter_Detected/GUI/loginBG.jpg&quot;);
background-repeat: no-repeat;
background-position: center;
</string>
   </property>
   <widget class="QLineEdit" name="UserEmail">
    <property name="geometry">
     <rect>
      <x>410</x>
      <y>269</y>
      <width>231</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
    background-color: lightgray; /* Change this to any color */
    color: black; /* Text color */
    border: 1px solid black; /* Optional: Border styling */
    border-radius:10;
}</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="placeholderText">
     <string>Email</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="UserPassword">
    <property name="geometry">
     <rect>
      <x>410</x>
      <y>321</y>
      <width>231</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
    background-color: lightgray; /* Change this to any color */
    color: black; /* Text color */
    border: 1px solid black; /* Optional: Border styling */
    border-radius:10;
}</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::Password</enum>
    </property>
    <property name="placeholderText">
     <string>Mật khẩu</string>
    </property>
   </widget>
   <widget class="QPushButton" name="LoginButton">
    <property name="geometry">
     <rect>
      <x>422</x>
      <y>390</y>
      <width>211</width>
      <height>28</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <kerning>false</kerning>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">border-color: rgb(255, 242, 166);</string>
    </property>
    <property name="text">
     <string>Đăng nhập</string>
    </property>
    <property name="checkable">
     <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
      <x>430</x>
      <y>160</y>
      <width>191</width>
      <height>91</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>30</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true"/>
    </property>
    <property name="text">
     <string>Đăng nhập</string>
    </property>
   </widget>
   <zorder>UserPassword</zorder>
   <zorder>LoginButton</zorder>
   <zorder>label_3</zorder>
   <zorder>UserEmail</zorder>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1098</width>
     <height>22</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>UserEmail</sender>
   <signal>returnPressed()</signal>
   <receiver>UserPassword</receiver>
   <slot>setFocus()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>525</x>
     <y>306</y>
    </hint>
    <hint type="destinationlabel">
     <x>525</x>
     <y>358</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>UserPassword</sender>
   <signal>returnPressed()</signal>
   <receiver>LoginButton</receiver>
   <slot>click()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>525</x>
     <y>358</y>
    </hint>
    <hint type="destinationlabel">
     <x>586</x>
     <y>425</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
